--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,13 @@ section {
   padding: 0 20px;
 }
 
+.flex-container {
+  display: flex;
+  height: 600px;
+  flex-flow: column wrap;
+  align-content: flex-start;
+}
+
 /* UTILITY CLASSES */
 
 /* Flex */
@@ -58,6 +65,11 @@ section {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
+}
+.--flex-start2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .--flex-end {
   display: flex;
@@ -216,7 +228,7 @@ p {
   box-shadow: var(--box-shadow);
   overflow: hidden;
   font-size: 1.3rem;
-  width: 20%;
+  width: 12%;
 }
 
 /* Margin */
@@ -351,7 +363,7 @@ p {
 }
 
 .--form-control {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 300;
 }
 
@@ -360,7 +372,7 @@ p {
 }
 
 .--form-control input {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   font-weight: 300;
   padding: 8px 1rem;
   border: 1px solid #777;
@@ -376,12 +388,13 @@ p {
 }
 
 .--form-control label {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 400;
   display: inline-block;
-  min-width: 7rem;
+  min-width: 5rem;
   color: var(--color-dark);
   margin-right: 1rem;
+  margin-left: 1rem;
 }
 
 @media screen and (max-width: 600px) {
