generate and display chosen number of dices with chosen number of sides

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ section {
 
 .flex-container {
   display: flex;
-  height: 600px;
+  height: 50%;
   flex-flow: column wrap;
   align-content: flex-start;
 }
