--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ section {
   flex-direction: column;
   /* width: 25%; */
   height: 100%;
+  width: 20%;
 }
 
 /* .middle {
@@ -364,6 +365,11 @@ p {
   background: #28a745;
 }
 
+.--btn-purple {
+  color: #fff;
+  background: #9d0191;
+}
+
 /* Background */
 .--bg-light {
   background: #fff;
@@ -386,7 +392,7 @@ p {
 }
 
 .--form-control {
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 300;
   box-sizing: border-box;
   width: 200px;
@@ -397,7 +403,7 @@ p {
 }
 
 .--form-control input {
-  font-size: 1.2rem;
+  font-size: 1.5rem;
   font-weight: 300;
   padding: 8px 1rem;
   border: 1px solid #777;
